<resources>
    <string name="app_name">Co-op</string>

    <string name="txt_guide_title_1">创新技术</string>
    <string name="txt_guide_title_desc_1">分布式数据存储</string>
    <string name="txt_guide_title_2">交易安全</string>
    <string name="txt_guide_title_desc_2">第三方平台监管</string>
    <string name="txt_guide_title_3">增值服务</string>
    <string name="txt_guide_title_desc_3">一站式创投平台</string>
    <string name="txt_guide_button_enter">进入应用</string>
    <!--各页面名称-->
    <string name="txt_title_login_user_iden">完善资料</string>
    <string name="txt_title_login_user_choose">创建身份</string>
    <string name="txt_title_login_user_choose_asset_type">资产类型</string>
    <string name="txt_title_about_us">关于我们</string>
    <string name="txt_title_qrcode">展示协作码</string>
    <string name="txt_title_update_password">忘记密码</string>
    <string name="txt_title_set_password">设置密码</string>
    <string name="txt_title_setting">设置</string>
    <string name="txt_title_call_me">联系CO-OP官方</string>
    <string name="txt_title_pay_token">转让数字权证给</string>
    <string name="txt_title_trans_desc">项目备注</string>
    <string name="txt_title_input_pwd">请输入转让密码</string>
    <string name="txt_title_user_agreement">用户协议</string>
    <string name="txt_title_user_iden">已进行实名认证</string>
    <string name="txt_title_trans_info_pop">追溯区块方式</string>
    <string name="txt_title_trans_detail">交易详情</string>
    <string name="txt_title_project_detail">项目详情</string>
    <string name="txt_title_browser">查询区块链</string>
    <string name="txt_title_usersafe">账户与安全</string>
    <string name="txt_title_update_phonenumber">变更手机号</string>
    <string name="txt_title_trans_block_info">交易区块信息</string>
    <string name="txt_title_asset_team_list">团队成员</string>
    <string name="txt_title_asset_white_list">交易名单</string>
    <string name="txt_title_trans_voucher">交易凭证</string>
    <!--登录注册-->
    <string name="txt_login_number_one">请验证账户身份:</string>
    <string name="txt_login_number_two">请设置6位数交易密码:</string>
    <string name="txt_login_forget_pwd">重新设置6位数密码:</string>
    <string name="txt_login_phone">输入手机号</string>
    <string name="txt_login_username_hint">编辑账户昵称 (12字以内)</string>
    <string name="txt_login_pass">输入验证码</string>
    <string name="txt_login_getpass">获取验证码</string>
    <string name="txt_login_servedesc">《服务协议》</string>
    <string name="txt_login_serve">我查看并同意CO-OP的</string>
    <string name="txt_login_choose_uses_hint">请选择您的角色选择进入的方式</string>
    <string name="txt_login_login">登录</string>
    <string name="txt_login_name">姓名</string>
    <string name="txt_login_iden_number">身份证</string>
    <string name="txt_login_confim">确认</string>
    <string name="txt_login_name_hint">请输入您的真实姓名</string>
    <string name="txt_login_nickname_hint">请输入您的昵称</string>
    <string name="txt_login_iden_number_hint">请输入您真实的身份证号码</string>
    <string name="txt_login_wanshanziliao">完善资料并登录后，我们将针对于您的创业项目\t尽快与您取得联系！</string>
    <string name="txt_login_iden">根据相关法律要求，创新技术项目的使用者需要进行实名认证。您的信息我们会进行上链处理，并保证不会对外泄漏，谢谢配合！</string>
    <!--设置-->
    <string name="txt_setting_about_us">关于co-op</string>
    <string name="txt_setting_user_iden">账户与安全</string>
    <string name="txt_setting_update_pwd">支付密码设置</string>
    <string name="txt_setting_clear_cache">清除缓存数据</string>
    <string name="txt_setting_user_iden_validate">已进行实名认证</string>
    <string name="txt_setting_choose_topartner">切换角色为资源方</string>
    <string name="txt_setting_choose_toenter">切换角色为创业者</string>
    <string name="txt_setting_logout">退出登录</string>
    <!--按钮名称 -->
    <string name="txt_look_help">查看帮助</string>
    <string name="txt_scan_btn">扫码</string>
    <string name="txt_qrcode_btn">展示协作码</string>
    <string name="txt_uses_enter_btn">我是创业者</string>
    <string name="txt_uses_partner_btn">我是协作者</string>
    <string name="txt_set_pass">支付密码设置</string>
    <string name="txt_call_me">联系我们</string>
    <string name="txt_setting">设置</string>
    <string name="txt_copy">复制</string>
    <string name="txt_call_me_wchat_name">官方微信:</string>
    <string name="txt_call_me_wchat">CO-OPservice</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_call_phone">拨打</string>
    <string name="txt_pay_token">转让</string>
    <string name="txt_pay_confim">完成转让</string>
    <string name="txt_finish">完成</string>
    <string name="txt_next">下一步</string>
    <string name="txt_forget_password">忘记密码？</string>
    <string name="txt_password_failed">密码有误，请重新填写！</string>
    <string name="txt_password_repeat_failed">俩次密码不一致，请重新填写！</string>
    <!--其他-->
    <string name="txt_network_error">网络异常!</string>
    <string name="txt_server_error">服务器异常!</string>
</resources>
