<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/bg_frame_white_to_gray_radius"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/dialog_title_background"
            android:gravity="center"
            android:text="@string/txt_title_call_me"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/companyPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:text="136-9114-0462"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/bg_call_me_textview"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_transparent"
                android:gravity="center_vertical|right"
                android:maxLines="1"
                android:text="@string/txt_call_me_wchat_name"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/companyWchat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/color_transparent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/txt_call_me_wchat"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_20"
                android:background="@color/color_969696" />

            <TextView
                android:id="@+id/copyTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/txt_copy"
                android:textColor="@color/color_58ACFF"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_F2F2F2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/txt_cancel"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_F2F2F2" />

            <TextView
                android:id="@+id/callPhoneTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_15"
                android:paddingTop="@dimen/dp_15"
                android:text="@string/txt_call_phone"
                android:textColor="@color/color_58ACFF"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>