<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/regist_background" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@drawable/bg_radius_white"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="/2"
                android:textColor="@color/color_999999" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/txt_login_iden"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/txt_login_name"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/edit_iden_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userNameET"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/color_transparent"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/txt_login_name_hint"
                android:paddingLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


        <TextView
            android:id="@+id/idenLableTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/txt_login_iden_number"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/edit_iden_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/userIdenNumberET"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/color_transparent"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/txt_login_iden_number_hint"
                android:maxLength="18"
                android:maxLines="1"
                android:paddingLeft="@dimen/dp_10"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_70"
            android:background="@drawable/btn_background_border"
            android:text="@string/txt_next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</RelativeLayout>