<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/bg_radius_f2f5f8"
        android:focusable="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/txt_title_input_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/payTokenNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="数量:111"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <com.coop.android.view.PwdEditText
            android:id="@+id/inputPwdEV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/bg_radius_white"
            android:cursorVisible="false"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgetPwdTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/color_transparent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="@dimen/dp_5"
                android:text="@string/txt_forget_password"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/pwdErrorTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@color/color_transparent"
                android:gravity="center_vertical|right"
                android:maxLines="1"
                android:padding="@dimen/dp_5"
                android:text="@string/txt_password_failed"
                android:textColor="@color/color_FF5858"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/color_CCCDC8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/txt_cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_CCCDC8" />

            <TextView
                android:id="@+id/payTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_15"
                android:text="@string/txt_pay_token"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>