<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2E26D9"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:scaleType="fitXY"
            android:src="@mipmap/regist_background"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@mipmap/login_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/login_phone_logo" />

            <EditText
                android:id="@+id/phoneEV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="9"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/txt_login_phone"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/color_ffffff"
                android:textColorHint="@color/color_ffffff"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/sp_14"
                android:theme="@style/MyEditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/login_password_logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_weight="9">

                <EditText
                    android:id="@+id/passwordEV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_login_pass"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="@color/color_ffffff"
                    android:textColorHint="@color/color_ffffff"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="@dimen/sp_14"
                    android:theme="@style/MyEditText" />

                <View
                    android:id="@+id/right_line"
                    android:layout_width="0.5dp"
                    android:layout_height="@dimen/dp_15" />

                <TextView
                    android:id="@+id/getVerifyEV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_5"
                    android:background="@drawable/btn_login_verify_yes"
                    android:gravity="center"
                    android:padding="@dimen/dp_8"
                    android:text="@string/txt_login_getpass"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_13" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/selectCB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/login_chb_selector"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/txt_login_serve"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/serveDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_login_servedesc"
                android:textColor="@color/color_3EFFCE"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_130"
            android:background="@drawable/btn_login_login_yes"
            android:text="@string/txt_login_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>
</LinearLayout>