<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_head_img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/color_F2F5F8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:text="账户"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/userIdenLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/txt_setting_user_iden"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/go_right_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/updatePwdPLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@color/color_E4E8EC" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:text="支付"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:id="@+id/updatePwdLL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_weight="1"
                android:text="@string/txt_setting_update_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:src="@mipmap/go_right_btn" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/color_E4E8EC"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:text="通用"
        android:textSize="@dimen/sp_14"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/cleanCacheLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/txt_setting_clear_cache"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/go_right_btn" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/color_E4E8EC" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:text="关于"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:id="@+id/aboutUsLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/txt_setting_about_us"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/go_right_btn" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/logoutCV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/txt_setting_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </android.support.v7.widget.CardView>
</LinearLayout>